[gd_scene load_steps=7 format=1]

[ext_resource path="res://themes/gui.tres" type="Theme" id=1]
[ext_resource path="res://scripts/gui/map.gd" type="Script" id=2]
[ext_resource path="res://assets/map/map.png" type="Texture" id=3]
[ext_resource path="res://assets/map/location_default.png" type="Texture" id=4]
[ext_resource path="res://themes/text30.tres" type="Theme" id=5]
[ext_resource path="res://scenes/menu/saveFunctions.tscn" type="PackedScene" id=6]

[node name="Control" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Control" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 1080.0
alignment = 0
__meta__ = {
"_edit_lock_": true
}

[node name="tabs" type="HBoxContainer" parent="Control/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 46.0
alignment = 0
__meta__ = {
"_edit_lock_": true
}

[node name="buttonToInventory" type="Button" parent="Control/VBoxContainer/tabs"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 1
margin/left = 0.0
margin/top = 0.0
margin/right = 477.0
margin/bottom = 46.0
disabled = true
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Inventaire"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="buttonToLog" type="Button" parent="Control/VBoxContainer/tabs"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 1
margin/left = 481.0
margin/top = 0.0
margin/right = 958.0
margin/bottom = 46.0
disabled = true
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Journal"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="buttonToEncyclopedia" type="Button" parent="Control/VBoxContainer/tabs"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 1
margin/left = 962.0
margin/top = 0.0
margin/right = 1439.0
margin/bottom = 46.0
disabled = true
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Encyclop√©die"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="menuTitle" type="Label" parent="Control/VBoxContainer/tabs"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 1
margin/left = 1443.0
margin/top = 3.0
margin/right = 1920.0
margin/bottom = 43.0
text = "Carte"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="mapCanvas" type="Panel" parent="Control/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 50.0
margin/right = 1920.0
margin/bottom = 976.0
__meta__ = {
"_edit_lock_": true
}

[node name="mapImage" type="TextureFrame" parent="Control/VBoxContainer/mapCanvas"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 930.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="tutorial_1" type="TextureButton" parent="Control/VBoxContainer/mapCanvas"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 206.0
margin/top = 460.0
margin/right = 259.0
margin/bottom = 513.0
toggle_mode = false
enabled_focus_mode = 1
shortcut = null
textures/normal = ExtResource( 4 )
params/resize_mode = 0
params/scale = Vector2( 1.5, 1.5 )
params/stretch_mode = 0

[node name="source_1" type="TextureButton" parent="Control/VBoxContainer/mapCanvas"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 641.0
margin/top = 768.0
margin/right = 694.0
margin/bottom = 821.0
toggle_mode = false
enabled_focus_mode = 1
shortcut = null
textures/normal = ExtResource( 4 )
params/resize_mode = 0
params/scale = Vector2( 1.5, 1.5 )
params/stretch_mode = 0

[node name="source_2" type="TextureButton" parent="Control/VBoxContainer/mapCanvas"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 954.0
margin/top = 677.0
margin/right = 1007.0
margin/bottom = 730.0
toggle_mode = false
enabled_focus_mode = 1
shortcut = null
textures/normal = ExtResource( 4 )
params/resize_mode = 0
params/scale = Vector2( 1.5, 1.5 )
params/stretch_mode = 0

[node name="source_3" type="TextureButton" parent="Control/VBoxContainer/mapCanvas"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1325.0
margin/top = 677.0
margin/right = 1378.0
margin/bottom = 730.0
toggle_mode = false
enabled_focus_mode = 1
shortcut = null
textures/normal = ExtResource( 4 )
params/resize_mode = 0
params/scale = Vector2( 1.5, 1.5 )
params/stretch_mode = 0

[node name="canal_1" type="TextureButton" parent="Control/VBoxContainer/mapCanvas"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 650.0
margin/top = 525.0
margin/right = 703.0
margin/bottom = 578.0
toggle_mode = false
enabled_focus_mode = 1
shortcut = null
textures/normal = ExtResource( 4 )
params/resize_mode = 0
params/scale = Vector2( 1.5, 1.5 )
params/stretch_mode = 0

[node name="ligne_1" type="TextureButton" parent="Control/VBoxContainer/mapCanvas"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 617.0
margin/top = 179.0
margin/right = 670.0
margin/bottom = 232.0
toggle_mode = false
enabled_focus_mode = 1
shortcut = null
textures/normal = ExtResource( 4 )
params/resize_mode = 0
params/scale = Vector2( 1.5, 1.5 )
params/stretch_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]

rect/min_size = Vector2( 0, 100 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 980.0
margin/right = 1920.0
margin/bottom = 1080.0
alignment = 0
__meta__ = {
"_edit_lock_": true
}

[node name="location" type="RichTextLabel" parent="Control/VBoxContainer/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 1800.0
margin/bottom = 100.0
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1
percent_visible = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="buttonsContainer" type="VBoxContainer" parent="Control/VBoxContainer/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 3
theme/theme = ExtResource( 5 )
margin/left = 1804.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 100.0
alignment = 0
__meta__ = {
"_edit_lock_": true
}

[node name="goButton" type="Button" parent="Control/VBoxContainer/HBoxContainer/buttonsContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 116.0
margin/bottom = 48.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Voyager"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="returnButton" type="Button" parent="Control/VBoxContainer/HBoxContainer/buttonsContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 52.0
margin/right = 116.0
margin/bottom = 100.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Retour"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="saveFunctions" parent="." instance=ExtResource( 6 )]

[connection signal="pressed" from="Control/VBoxContainer/tabs/buttonToInventory" to="." method="_on_buttonToInventory_pressed"]

[connection signal="pressed" from="Control/VBoxContainer/tabs/buttonToLog" to="." method="_on_buttonToLog_pressed"]

[connection signal="pressed" from="Control/VBoxContainer/tabs/buttonToEncyclopedia" to="." method="_on_buttonToEncyclopedia_pressed"]

[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/buttonsContainer/goButton" to="." method="_on_goButton_pressed"]

[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/buttonsContainer/returnButton" to="." method="_on_returnButton_pressed"]


